--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="page-wrapper">
     <header id="header">
-			<a id="logo1" href="index.html"><img src="logo3.png"></a>
+			<a id="logo1" href="index.html"><img src="logo3.png" alt="Acme logo, large and in read"></a>
 			<h1>My Demo Site</h1>
     </header>
     <nav id="main-nav">
@@ -24,15 +24,15 @@
     <main id="content-wrapper">
       <div id="main-content">
         <h2><strong>This is our h2 Tag</strong></h2>
-        <img class="imageR" src="./images/main.png">
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <img class="imageR" src="./images/main.png" alt="Logo for Main Squeeze Juice Company in black and white">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <ul id="bul1">
-          <li> List 1</li>
+          <li>List 1</li>
           <li>List 2</li>
-          <li> List 3</li>
+          <li>List 3</li>
           <li>List 4</li>
         </ul>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -49,14 +49,10 @@
       <aside id="side-content">
         <h3>Interesting Articles</h3>
         <ol id="news">
-          <a href="#"><li>Article 1</li></a>
-          <p>Preview of very interesting article article</p>
-          <a href="#"><li>Article 2</li></a>
-          <p> Preview of very interesting article article  </p>
-          <a href="#"><li>Article 3</li></a>
-          <p>Preview of very interesting article article</p>
-          <a href="#"><li>Article 4</li></a>
-          <p> Preview of very interesting article article  </p>
+          <li><a href="#">Article 1</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 2</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 3</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 4</a><div><p>Preview of very interesting article article</p></div></li>
         </ol>
        </aside>
      </main>
